--- a/frontend/src/app/pages/catalogo/catalogo.component.html
+++ b/frontend/src/app/pages/catalogo/catalogo.component.html
@@ -93,13 +93,14 @@
 
     <!-- Grid de produtos -->
     <div class="produtos-grid" *ngIf="produtos.length > 0">
-      <div class="produto-card" *ngFor="let produto of produtos">
+      <div class="produto-card" *ngFor="let produto of produtos; trackBy: trackByProdutoId">
         <!-- Imagem do produto -->
         <div class="produto-image">
-          <img 
-            [src]="produto.images[0] || '/assets/images/no-image.png'" 
+          <app-produto-image 
+            [src]="getFirstImage(produto.images)"
             [alt]="produto.title"
-            (error)="$event.target.src='/assets/images/no-image.png'">
+            [height]="200">
+          </app-produto-image>
           
           <!-- Badge de tempo restante -->
           <div class="time-badge" *ngIf="produto.isActive" [class.urgente]="produto.timeRemaining < 3600">
