--- a/frontend/src/app/layouts/main-layout.component.html
+++ b/frontend/src/app/layouts/main-layout.component.html
@@ -22,6 +22,13 @@
                 <a routerLink="/produtos/novo" class="dropdown-item">Novo Produto</a>
               </div>
             </div>
+            <div class="nav-dropdown">
+              <button class="nav-link dropdown-toggle">Meus Lotes</button>
+              <div class="dropdown-menu">
+                <a routerLink="/lotes" class="dropdown-item">Listar Lotes</a>
+                <a routerLink="/lotes/novo" class="dropdown-item">Novo Lote</a>
+              </div>
+            </div>
           }
           <a routerLink="/profile" class="nav-link">Perfil</a>
           <button (click)="logout()" class="btn btn-outline">Sair</button>
