--- a/frontend/src/app/layouts/main-layout.component.html
+++ b/frontend/src/app/layouts/main-layout.component.html
@@ -57,7 +57,7 @@
                   Contratos
                 </a>
                 <div class="dropdown-divider"></div>
-                <a href="#" class="dropdown-item">
+                <a routerLink="/admin/usuarios" class="dropdown-item">
                   <i class="fas fa-users me-2"></i>
                   Usuários
                 </a>
